--- a/index.html
+++ b/index.html
@@ -498,22 +498,26 @@
         </section> -->
 
         <section class="bg-light">
-            <!-- <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-6 lh-1 fw-light">For Who ?</h2>
-                        <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
-                            <span class="Textblue">Designers</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use through a panel on our platform.<br><br>
-                            <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
-                            <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.
-                        </p>    
-                    </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6 imgcenter">
-                        <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
-                </div> -->
+            <div class="container px-5">
+              <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                  <div class="col-12 col-lg-6">
+                      <h2 class="display-6 lh-1 fw-light">For Who ?</h2>
+                      <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
+                          <span class="Textblue">Designers</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use through a panel on our platform.<br><br>
+                          <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
+                          <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.
+                      </p>    
+                  </div>
+                  <div class="col-sm-10 col-md-8 col-lg-6 imgcenter">
+                      <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
+                  </div> 
+              </div>
+              <div class="display-6 lh-1 fw-light"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
+          </div>
+          </section>
 
-                <div class="display-6 lh-1 fw-light"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
-            </section>
+                
+
 
 
 
