--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
         <section class="bg-light">
             <div class="container px-5">
-              <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+              <!-- <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                   <div class="col-12 col-lg-6">
                       <h2 class="display-6 lh-1 fw-light">For Who ?</h2>
                       <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
@@ -511,7 +511,7 @@
                   <div class="col-sm-10 col-md-8 col-lg-6 imgcenter">
                       <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                   </div> 
-              </div>
+              </div> -->
               <div class="display-6 lh-1 fw-light"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
           </div>
           </section>
