--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             </div>
         </section>
 
-        <!-- <section class="bg-light">
+        <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                
@@ -495,7 +495,7 @@
                  
                 </div>
 
-        </section> -->
+        </section>
 
         <section class="bg-light">
             <div class="container px-5">
