--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                                 - Being a pioneer in the digital & physical fashion  space.<br>
                                 - Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
                             </p> -->
-                            <button type="button" class="btn btn-primary  px-3 mb-lg-0">Try Beta For Free</button>
+                            <input type="button" onclick="window.location.href='https://app.xariia.com/'" target='_blank'  value="Try Beta For Free" class="btn btn-primary  px-3 mb-lg-0">
+                              
                         </div>
 
                     </div>
@@ -348,7 +349,7 @@
             <div class="container px-5">
 
             <div class="align-items-center text-center">
-                <button type="button" class="btn btn-primary1  px-3 mb-lg-0">Try Beta For Free</button>
+                <input type="button" onclick="window.location.href='https://app.xariia.com/'" target='_blank'  value="Try Beta For Free"  class="btn btn-primary1  px-3 mb-lg-0"n>
             </div>
 
             </div>
@@ -481,7 +482,7 @@
             <div class="container px-5">
 
             <div class="align-items-center text-center">
-                <button type="button" class="btn btn-primary1  px-3 mb-lg-0">Try Beta For Free</button>
+                <input type="button" onclick="window.location.href='https://app.xariia.com/'" target='_blank'  value="Try Beta For Free"  class="btn btn-primary1  px-3 mb-lg-0"n>
             </div>
 
             </div>
@@ -521,7 +522,7 @@
             <div class="container px-5">
 
             <div class="align-items-center text-center">
-                <button type="button" class="btn btn-primary1  px-3 mb-lg-0">Try Beta For Free</button>
+                <input type="button" onclick="window.location.href='https://app.xariia.com/'" target='_blank'  value="Try Beta For Free"  class="btn btn-primary1  px-3 mb-lg-0"n>
             </div>
 
             </div>
@@ -567,7 +568,7 @@
             <div class="container px-5">
 
             <div class="align-items-center text-center">
-                <button type="button" class="btn btn-primary1  px-3 mb-lg-0">Try Beta For Free</button>
+                <input type="button" onclick="window.location.href='https://app.xariia.com/'" target='_blank'  value="Try Beta For Free"  class="btn btn-primary1  px-3 mb-lg-0"n>
             </div>
 
             </div>
