--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
     <title>XARIIA</title>
     <meta charset="UTF-8">
-    <meta name="description" content="XARIIA automates the time-consuming pattern print design process for the fashion industry with image-generating AI that creates it in seconds, resulting in designs that are 80% cheaper and have a 90x faster turnaround time, resulting in a superior UX."
+    <meta name="description" content="XARIIA automates the fashion industry's time-consuming pattern print design process, generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends."
     >
     <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta name="author" content="Shirak Kevorkian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
     <meta property="og:url" content="https://xariia.com/" />
-    <meta property="og:description" content="XARIIA automates the time-consuming pattern print design process for the fashion industry with image-generating AI that creates it in seconds, resulting in designs that are 80% cheaper and have a 90x faster turnaround time, resulting in a superior UX.">
+    <meta property="og:description" content="XARIIA automates the fashion industry's time-consuming pattern print design process, generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends.">
     <meta name="keywords" content="pattern me, XARIIA, fashion design, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta property="og:image" content="assets/apple-touch-icon-114x114.png"><meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="XARIIA Logo" />
@@ -136,7 +136,7 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
-                        <div class="mb-5 mb-lg-0 text-lg-start">
+                        <div class="mb-2 mb-lg-0 text-lg-start">
                             <h1 class="display-5 lh-2 fw-bold">Create <br>Unique & Custom <br> Print Designs In Seconds
                             </h1>
                             <p class="textlanding">XARIIA automates the fashion industry's time-consuming pattern print design process, generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends.
@@ -389,7 +389,7 @@
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/shirakteamimg.png" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold  mb-0 textresponsive">
-                                            <a href="https://www.linkedin.com/in/shirak-kevorkian/" target="_blank">Shirak Kevorkian</a><br>
+                                            <a href="" target="_blank">Shirak Kevorkian</a><br>
                                             CEO
                                         </p>
                                     </div>
@@ -398,7 +398,7 @@
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/varunteamimg.png" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold  mb-0 textresponsive">
-                                            <a href="https://www.linkedin.com/in/jainvarunn/" target="_blank">Varun Jain</a><br>
+                                            <a href="" target="_blank"></a><br>
                                             Creative Director
                                         </p>
                                     </div>
@@ -407,7 +407,7 @@
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/amathteamimg.jpeg" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold  mb-0 textresponsive">
-                                            <a href="https://www.linkedin.com/in/amathsow/" target="_blank">Amath Sow</a><br>
+                                            <a href="" target="_blank"></a><br>
                                             Software / ML Engineer
                                         </p>
                                     </div>
@@ -416,7 +416,7 @@
                                     <div class="text-center">
                                         <img class="teamwidth" src="assets/sudheshteamimg.jpeg" alt="a white t-shirt with no print"  />
                                         <p class="fw-bold  mb-0 textresponsive">
-                                            <a href="https://www.linkedin.com/in/sudhesh-solomon/" target="_blank">Sudhesh Solomon</a><br>
+                                            <a href="" target="_blank"></a><br>
                                             ML Engineer
                                         </p>
                                     </div>     
@@ -431,9 +431,9 @@
          <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center">
-                    <h2 class="display-5 fw-bold text-muted text-center">Which Is Achieved By Utilizing</h2>
-                    <div class="col-xs-12 col-md-12 col-lg-6 text-muted align-items-center justify-content-center vidsection mb-5">
-                        <video width=70% height=100% autoplay="autoplay" controlsList="nofullscreen" muted loop autoplay>
+                    <h2 class="display-5 fw-bold text-muted text-center">Results Achieved by Utilizing</h2>
+                    <div class="col-xs-12 col-md-12 col-lg-6 text-muted align-items-center justify-content-center vidsection">
+                        <video class="Video"  autoplay="autoplay" controlsList="nofullscreen" muted loop autoplay>
                             <source src="https://d2om6xel7v1icb.cloudfront.net/xariia.mp4" type="video/mp4" />
                         </video>                     
                     </div>
