--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <title>XARIIA</title>
     <meta charset="UTF-8">
-    <meta name="description" content="XARIIA automates the fashion industry's time-consuming pattern print design process, by generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends."
+    <meta name="description" content="XARIIA automates the fashion industry's time-consuming pattern print design process by generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends."
     >
     <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta name="author" content="Shirak Kevorkian">
