--- a/index.html
+++ b/index.html
@@ -588,10 +588,10 @@
 
 
         <section class="bg-light">
-            <div class="container px-5 text-muted">
+            <div class="container px-5 text-muted align-items-center justify-content-center">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
 
-                    <div class="col-sm-10 col-md-8 col-lg-4 mb-3">
+                    <div class="col-sm-10 col-md-8 col-lg-4 mb-3 text-center">
                         <div class="px-sm-0"><img class="img-fluid imgSus" src="assets/Sustianble.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
                     </div>
                     <div class="col-12 col-lg-8">
