--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                         <div class="mb-3 mb-lg-0 text-lg-start">
                             <h1 class="display-5 lh-2 fw-bold">Create <br>Unique & Custom <br> Print Designs In Seconds
                             </h1>
-                            <p class="textlanding">XARIIA automates the fashion industry's time-consuming pattern print design process, by generating unique and custom designs in seconds based on customer input and forecasted data-driven fashion trends.
+                            <p class="textlanding">
+                                XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs using customer input and data-driven fashion trends.
                             </p>
 
                             <!-- <p class="lead fw-bold  text-muted mb-5">             
@@ -270,8 +271,8 @@
                     <div class="col-xl-7">
                         <div class="textblack">
                             <p class="textlanding text-center">
-                                XARIIA creates high-quality designs, with the automation process reducing costs, speeding up production, and making the process simple and scalable.
-                            </p>
+                                XARIIA Harnesses the power of generative AI, guaranteeing unparalleled quality, efficiency, and an extraordinary customer journey while streamlining the process for seamless scalability.                           
+                             </p>
 
                         </div>
                     </div>
@@ -457,7 +458,7 @@
                                         Image Generating AI                                    
                                     </h3>
                                     <p class="mb-0 text-muted">
-                                        That creates unique and customer-pattern print designs in seconds based on customer input and forecasted data-driven trends from the fashion industry.                                    
+                                        That creates unique and customer-pattern print designs in seconds based on customer input and forecasted data-driven trends from the industry.                                    
                                     </p>
                             </div>
                             <br>
