--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <h1 class="display-5 lh-2 fw-bold">Create <br>Unique & Custom <br> Print Designs In Seconds
                             </h1>
                             <p class="textlanding">
-                                XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs using customer input and data-driven fashion trends.
+                                XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs in seconds using customer input and forecasted data-driven fashion trends.
                             </p>
 
                             <!-- <p class="lead fw-bold  text-muted mb-5">             
@@ -271,7 +271,7 @@
                     <div class="col-xl-7">
                         <div class="textblack">
                             <p class="textlanding text-center">
-                                XARIIA Harnesses the power of generative AI, guaranteeing unparalleled quality, efficiency, and an extraordinary customer journey while streamlining the process for seamless scalability.                           
+                                XARIIA Harnesses the power of generative AI, guaranteeing unparalleled quality, efficiency, and an extraordinary customer journey while streamlining the design process for seamless scalability.                           
                              </p>
 
                         </div>
@@ -286,9 +286,9 @@
                                     <!-- Feature item-->
                                     <div class="text-center featureitem">
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext ">Elevated Design Standards </h3>
+                                        <h3 class="font-alt featurestext ">Trend-Driven Designs</h3>
                                         <p class="mb-0">
-                                            The automated process ensures the creation of high-quality, seamless tiles and trend-driven designs that meet industry standards while remaining unique and custom.
+                                            XARIIA leverages forecasted and data-driven fashion trends to generate high-quality, unique, custom, seamless tiles, which are in line with the target market's current market demands.
                                         </p>
                                     </div>
                                 </div>
@@ -308,10 +308,11 @@
                                     <!-- Feature item-->
                                     <div class="text-center featureitem">
                                         <img class="iconwidth" src="assets/experience.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext ">Seamless Customer Experience 
+                                        <h3 class="font-alt featurestext ">
+                                            Superior Customer Experience
                                         </h3>
                                         <p class="mb-0">
-                                            The automated process ensures a superior customer experience through instant communication of design requirements, instant design creation, and visualization, thereby eliminating friction.
+                                            The automated process ensures a seamless customer experience through instant communication of design parameters, instant design creation, and visualization, thereby eliminating friction.
                                         </p> 
                                    </div>
                                 </div>  
@@ -440,37 +441,37 @@
                     </div>
                   
                     <div class="col-12 col-lg-6 align-items-center justify-content-center text-muted">
-                            <div class="col-md-12 col-lg-8 featureitemproduct">
+                            <div class="col-md-12 col-lg-9 featureitemproduct">
                                 <!-- Feature item-->
                                     <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                     <h3 class="font-alt text-muted">
                                         User Friendly Interface                                    
                                     </h3>
                                     <p class="mb-0 text-muted">
-                                        That simplifies and facilitates the communication of the customer’s design requirements, allowing the customers to easily experiment with the different combinations of parameters available.                                    
+                                        That offers an intuitive and user-friendly interface that simplifies and facilitates the communication of customer design input, allowing them to easily experiment with the different combinations of parameters available.
                                     </p>
                             </div>
                             <br>
 
-                            <div class="col-md-12 col-lg-8  featureitemproduct">
+                            <div class="col-md-12 col-lg-9  featureitemproduct">
                                     <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                     <h3 class="font-alt text-muted">
-                                        Image Generating AI                                    
+                                        Generative AI                                    
                                     </h3>
                                     <p class="mb-0 text-muted">
-                                        That creates unique and customer-pattern print designs in seconds based on customer input and forecasted data-driven trends from the industry.                                    
+                                        That’s capable of rapidly generating print designs based on customer input and leveraging forecasted and data-driven fashion trends from the industry by integrating trend analysis into XARIIA's AI
                                     </p>
                             </div>
                             <br>
 
 
-                            <div class="col-md-12 col-lg-8  featureitemproduct">
+                            <div class="col-md-12 col-lg-9  featureitemproduct">
                                     <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                     <h3 class="font-alt text-muted ">
                                         Real-Time Design Visualizer                                    
                                     </h3>
                                     <p class="mb-0 text-muted">
-                                        Which provides a 3D mockup of the generated pattern print design in real time.                                    
+                                        That allows customers to view the generated designs in real time via interactive 2D, 3D mockups and augmented reality (AR). This                                    
                                     </p> 
                             </div>  
                     </div>
