--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 
     <title>XARIIA</title>
     <meta charset="UTF-8">
-    <meta name="description" content="XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs in seconds using customer input and forecasted data-driven fashion trends."
-    >
+    <meta name="description" content="XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs in seconds using customer input and forecasted data-driven fashion trends.">
     <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
+
     <meta name="author" content="Shirak Kevorkian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
     <meta property="og:url" content="https://xariia.com/" />
     <meta property="og:description" content="XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs in seconds using customer input and forecasted data-driven fashion trends.">
-    <meta name="keywords" content="pattern me, XARIIA, fashion design, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta property="og:image" content="assets/apple-touch-icon-114x114.png"><meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="XARIIA Logo" />
 
