--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext ">Trend-Driven Designs</h3>
                                         <p class="mb-0">
-                                            XARIIA leverages forecasted and data-driven fashion trends to generate high-quality, unique, custom, seamless tiles, which are in line with the target market's current market demands.
+                                            The automated process ensures the generation of high-quality, unique, and custom seamless tiles that match current market demands.
                                         </p>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                             Cost-Effective & Time-Efficient
                                         </h3>
                                         <p class="mb-0">
-                                            The automated process cuts design costs by 80% and achieves a 2880x faster turnaround time, delivering a highly efficient and cost-effective solution.
+                                            The automated process cuts design costs by 80% and achieves a 2880x faster design turnaround time.
                                         </p>
                                     </div>
                                 </div>
@@ -311,7 +311,7 @@
                                             Superior Customer Experience
                                         </h3>
                                         <p class="mb-0">
-                                            The automated process ensures a seamless customer experience through instant communication of design parameters, instant design creation, and visualization, thereby eliminating friction.
+                                            The automated process ensures seamless customer experience with instant design communication, generation, and visualization.
                                         </p> 
                                    </div>
                                 </div>  
@@ -453,7 +453,7 @@
                                     Generative AI                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That’s capable of rapidly generating print designs based on customer input and leveraging forecasted and data-driven fashion trends by integrating trend analysis into XARIIA's AI.
+                                    That’s capable of rapidly generating print designs based on customer input and leveraging forecasted data-driven fashion trends by integrating data analysis into XARIIA's AI.
                                 </p>
                         </div>
                         <br>
@@ -462,10 +462,10 @@
                         <div class="col-md-12 col-lg-12  featureitemproduct">
                                 <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                 <h3 class="font-alt text-muted ">
-                                    Real-Time Design Visualizer                                    
+                                    Design Visualizer                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That allows customers to view the generated designs in real time via interactive 2D, 3D mockups and augmented reality.                        
+                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality.                        
                                 </p> 
                         </div>  
                 </div>
