--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext ">Trend-Driven Designs</h3>
                                         <p class="mb-0">
-                                            The automated process ensures the generation of high-quality, unique, and custom seamless tiles that match current market demands.
+                                            The automated process ensures the generation of high-quality, unique, and custom seamless tiles that match current market demands and trends.
                                         </p>
                                     </div>
                                 </div>
@@ -442,7 +442,7 @@
                                     User Friendly Interface                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That offers an intuitive and user-friendly interface that simplifies and facilitates the communication of customer design input, allowing them to easily experiment with the different combinations of parameters available.
+                                    That offers an intuitive platform for customers to effortlessly convey their design input.
                                 </p>
                         </div>
                         <br>
@@ -453,7 +453,7 @@
                                     Generative AI                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That’s capable of rapidly generating print designs based on customer input and leveraging forecasted data-driven fashion trends by integrating data analysis into XARIIA's AI.
+                                    That’s capable of rapidly generating print designs based on customer input and forecasted data-driven fashion trends by integrating data analysis into XARIIA's AI.
                                 </p>
                         </div>
                         <br>
@@ -465,7 +465,7 @@
                                     Design Visualizer                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality.                        
+                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality(AR).                        
                                 </p> 
                         </div>  
                 </div>
