--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>XARIIA</title>
     <meta charset="UTF-8">
     <meta name="description" content="XARIIA revolutionizes the fashion industry by automating the tedious pattern print design process. It swiftly generates distinctive, bespoke designs in seconds using customer input and forecasted data-driven fashion trends.">
-    <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
-
+    <meta name="keywords" content="Seamless Tile Pattern Print Design, AI Design, seamless tile, seamless repeat, seamless print, seamless pattern, Artificial intelligence fashion design, design automation, AI-driven design, trend-driven design, AI prints, AI pattern print designs, AI Designed Fashion, Pattern Prints, Patterned textiles, textile prints, Custom Pattern Prints, Customized prints, personalized patterns, bespoke pattern printing, Fashion AI, Fashion artificial intelligence, AI in the fashion industry, AI fashion solutions, Custom Prints, Personalized prints, Custom Pattern Print Designs, Customized pattern design, personalized print design, bespoke pattern prints, Unique Pattern Prints, Distinctive prints, exclusive patterns, one-of-a-kind prints, AI-generated patterns, automated pattern design, AI-generated print designs, automated pattern printing, AI Designed Clothes, AI-generated fashion, automated clothing design, AI fashion design, Digital Fashion, Virtual fashion, digital clothing, digital apparel, Print Design, textile design, pattern design, PatternMe, XARIIA, Metaverse Fashion, Virtual world fashion, metaverse clothing, digital realm fashion, virtual clothing, Phygital Fashion, Hybrid fashion, physical-digital fashion, digital-physical garments, Fashion design Automation, Automated fashion processes, AI-powered fashion design automation, streamlined fashion production, Fashion Design, Apparel design, clothing design, garment design, Real-Time Fashion Design, Instant fashion design, on-the-fly design creation, real-time apparel design, Fashion Visualizer, Apparel visualization, clothing mockup, Fashion Generation System, Automated fashion creation, AI-powered fashion generation, computer-generated fashion, high-end personalized garments, Fashion Data Analysis, Fashion analytics, data-driven fashion insights, trend analysis, digital fashion marketplace, Fashion Prototyping, fashion prototyping technologies, rapid prototyping, Textile design Technologies, Advanced textile design, textile design innovations, Wearable Technology in Fashion, Smart fashion, tech-infused clothing, fashion tech, Eco-friendly textiles, sustainable fashion practices, Ethical fashion, sustainable production, Fast Fashion Impact, Environmental impact of fast fashion, Eco-friendly fashion design, AI generated fashion, AI generated pattern print designs">
     <meta name="author" content="Shirak Kevorkian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
@@ -20,7 +19,6 @@
     <!-- Standard Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="icon" type="image/png" href="assets/favicon-16x16.png" />
-    
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
@@ -465,14 +463,14 @@
                                     Design Visualizer                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality(AR).                        
+                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality (AR).                        
                                 </p> 
                         </div>  
                 </div>
 
                     <div class="col-xs-12 col-md-12 col-lg-4 text-muted align-items-center justify-content-center vidsection">
                         <video class="Video"  autoplay="autoplay" controlsList="nofullscreen" muted loop autoplay>
-                            <source src="https://d2om6xel7v1icb.cloudfront.net/XARIIA-demo.mov" type="video/mp4" />
+                            <source src="https://d2om6xel7v1icb.cloudfront.net/XARIIA-demo-new.mp4" type="video/mp4" />
                         </video>                     
                     </div>
 
