--- a/index.html
+++ b/index.html
@@ -463,14 +463,15 @@
                                     Design Visualizer                                    
                                 </h3>
                                 <p class="mb-0 text-muted">
-                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality (AR).                        
+                                    That allows customers to view the generated designs in real-time via interactive 2D, 3D mockups and augmented reality.                        
                                 </p> 
                         </div>  
                 </div>
 
                     <div class="col-xs-12 col-md-12 col-lg-4 text-muted align-items-center justify-content-center vidsection">
                         <video class="Video"  autoplay="autoplay" controlsList="nofullscreen" muted loop autoplay>
-                            <source src="https://d2om6xel7v1icb.cloudfront.net/XARIIA-demo-new.mp4" type="video/mp4" />
+                            <source src="https://d2om6xel7v1icb.cloudfront.net/XARIIA Demo Website.mp4
+                            " type="video/mp4" />
                         </video>                     
                     </div>
 
